Make mongorestore restore collection options and indexes from the metadata file. SERVER-1311